# CodeTherapy

./: .gitignore  Dockerfile  README.md  _results.txt  _test_endpoints.py  docker-compose.yml  evaluate_baselines.py  inference.py  openenv.yaml  pg.md  pyproject.toml  test_output_clean.txt  test_output_tasks.txt
backend/: agent.py  main.py  requirements.txt
backend/engine/: __init__.py  environment.py  experiment.py  reflection_scorer.py
backend/models/: __init__.py  action.py  observation.py  reward.py  state.py
backend/tasks/: __init__.py  base_task.py  custom_task.py  task_easy.py  task_hard.py  task_medium.py  timeout_util.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ActionPanel.css  ActionPanel.jsx  CodeViewer.css  CodeViewer.jsx  ComparisonChart.css  ComparisonChart.jsx  ExperimentPanel.css  ExperimentPanel.jsx  Header.css  Header.jsx  LearningCurve.css  LearningCurve.jsx  ReflectionPanel.css  ReflectionPanel.jsx  RewardChart.css  RewardChart.jsx  RewardMeter.css  RewardMeter.jsx  StepHistory.css  StepHistory.jsx  TaskSelector.css  TaskSelector.jsx  TestResults.css  TestResults.jsx
frontend/src/services/: api.js
frontend/src/store/: useEnvironmentStore.js
server/: app.py
