[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reflection-debug-agent"
version = "0.1.0"
description = "OpenEnv Reflection Debugging Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "openai",
    "httpx",
    "openenv-core>=0.2.0"
]

[project.scripts]
openenv-server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
